clarify process of using local manifest

--- a/README
+++ b/README
@@ -11,12 +11,15 @@ Make a build directory:
 
 	mkdir Andoid (or whatever name you choose)
 	cd Android (or the name  you chose)
+	
 
-To initialize your local repository using the AOSP manifest, use a command like this:
+To initialize your local repository using the AOSP manifest, use commands like these:
 
     repo init -u https://android.googlesource.com/platform/manifest -b android-4.0.1_r1.2
     
-    Download: https://github.com/ICSTH3ORY/AOSP4OMAP4/blob/master/local_manifest.xml
+    curl -L -o .repo/local_manifest.xml -O -L https://github.com/ICSTH3ORY/AOSP4OMAP4/blob/master/local_manifest.xml
+
+    	( or Download: https://github.com/ICSTH3ORY/AOSP4OMAP4/blob/master/local_manifest.xml
 		and place it in ~/Android/.repo/local_manifest.xml (or ~/'name you chose'/.repo)
 
 Then to sync up:
